# avatar_interaction

./: .gitignore  README.md
avatar_operator/: CMakeLists.txt  package.xml
avatar_operator/include/utils/: video_frame_proc.h
avatar_operator/src/: ndi_recv_ui_node.cpp
laser/: CMakeLists.txt  package.xml
laser/src/: .laser_one_robot_working.cpp.swp  laser.cpp
ros_video_stream/: CMakeLists.txt  package.xml
ros_video_stream/nodes/: streamer.cpp
video_audio_proc/: CMakeLists.txt  README.md  setup_env.sh
video_audio_proc/configs/: blackmagic.config  insta360.config  left_jabra.config  nexigo.config  operator_video.config  right_jabra.config  test.config
video_audio_proc/include/utils/: video_frame_proc.h
video_audio_proc/scripts/: .asoundrc  avatar_alias.sh  ndi-config.v1.json  operator_session.sh  run.sh
video_audio_proc/src/: alsa_capture.c  alsa_ndi_send.cpp  audio_capture.c  audio_playback.c  cam_stream.c  ma_audio_proc.cpp  ndi_recv.cpp  ndi_recv_pa.cpp  ndi_send.cpp  pa_ndi_send.cpp  v4l2_ndi_send.cpp  v4l_sdl.c  v4l_sdl.cpp
